logs/caspo.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/caspo'...
Listing './lib/python3.5/site-packages/caspo/console'...
Compiling './lib/python3.5/site-packages/caspo/control.py'...
***   File "./lib/python3.5/site-packages/caspo/control.py", line 63
    return core.ClampingList([core.Clamping(map(lambda (v,s): core.Literal(v,s), row[row != 0].iteritems())) for _,row in df.iterrows()])
                                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/caspo/core'...
Compiling './lib/python3.5/site-packages/caspo/core/clamping.py'...
***   File "./lib/python3.5/site-packages/caspo/core/clamping.py", line 165
    clampings.append(Clamping(map(lambda (v,s): Literal(v[3:],s), row[row!=0].iteritems())))
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/caspo/core/graph.py'...
***   File "./lib/python3.5/site-packages/caspo/core/graph.py", line 45
    return klass(it.imap(lambda (source,target,sign): (source,target,{'sign': sign}), tuples))
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/caspo/core/hypergraph.py'...
***   File "./lib/python3.5/site-packages/caspo/core/hypergraph.py", line 75
    literals = map(lambda (_,source,sign): Literal(source,sign), h.itertuples(index=False))
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/caspo/core/logicalnetwork.py'...
***   File "./lib/python3.5/site-packages/caspo/core/logicalnetwork.py", line 294
    formulas = formulas.union(it.imap(lambda (_,f): f, network.formulas_iter()))
                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/caspo/data'...
Listing './lib/python3.5/site-packages/caspo/data/ExtLiver'...
Listing './lib/python3.5/site-packages/caspo/data/LiverDREAM'...
Listing './lib/python3.5/site-packages/caspo/data/LiverToy'...
Listing './lib/python3.5/site-packages/caspo/data/Toy'...
Compiling './lib/python3.5/site-packages/caspo/design.py'...
***   File "./lib/python3.5/site-packages/caspo/design.py", line 83
    keyfunc = lambda (i,v,s): i
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/caspo/encodings'...
Listing './lib/python3.5/site-packages/caspo/encodings/classify'...
Listing './lib/python3.5/site-packages/caspo/encodings/control'...
Listing './lib/python3.5/site-packages/caspo/encodings/design'...
Listing './lib/python3.5/site-packages/caspo/encodings/learn'...
Listing './lib/python3.5/site-packages/caspo-3.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
